repro for phantomjs

--- a/phantomjs-tryout.ipynb
+++ b/phantomjs-tryout.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "// address of the notebook\n",
-    "var address = \"http://localhost:8888/notebooks/test.ipynb\"\n",
+    "var address = \"http://localhost:8888/notebooks/phantomjs-tryout.ipynb\"\n",
     "// auth token from Jupyter console\n",
     "var authToken = \"b05a65d622136665a1292b9f3a29192364eaccb4bfbc6887\"\n",
     "// cell number with a widget output\n",
@@ -212,7 +212,7 @@
     "           saveAsPNG();\n",
     "        });\n",
     "    }\n",
-    "});\n"
+    "});"
    ]
   },
   {
