update phantomjs example

--- a/phantomjs-tryout.ipynb
+++ b/phantomjs-tryout.ipynb
@@ -261,6 +261,141 @@
     "CONSOLE: DEBUG: output_result div: undefined\n",
     "DEBUG: clipRect: -1\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Try with visualizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# from https://github.com/yaroslavvb/notebooks/blob/master/simple_rewiring.ipynb\n",
+    "# make things wide\n",
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "\n",
+    "from IPython.display import clear_output, Image, display, HTML\n",
+    "\n",
+    "def strip_consts(graph_def, max_const_size=32):\n",
+    "    \"\"\"Strip large constant values from graph_def.\"\"\"\n",
+    "    strip_def = tf.GraphDef()\n",
+    "    for n0 in graph_def.node:\n",
+    "        n = strip_def.node.add() \n",
+    "        n.MergeFrom(n0)\n",
+    "        if n.op == 'Const':\n",
+    "            tensor = n.attr['value'].tensor\n",
+    "            size = len(tensor.tensor_content)\n",
+    "            if size > max_const_size:\n",
+    "                tensor.tensor_content = \"<stripped %d bytes>\"%size\n",
+    "    return strip_def\n",
+    "\n",
+    "def show_graph(graph_def=None, width=1200, height=800, max_const_size=32, ungroup_gradients=False):\n",
+    "    if not graph_def:\n",
+    "        graph_def = tf.get_default_graph().as_graph_def()\n",
+    "        \n",
+    "    \"\"\"Visualize TensorFlow graph.\"\"\"\n",
+    "    if hasattr(graph_def, 'as_graph_def'):\n",
+    "        graph_def = graph_def.as_graph_def()\n",
+    "    strip_def = strip_consts(graph_def, max_const_size=max_const_size)\n",
+    "    data = str(strip_def)\n",
+    "    if ungroup_gradients:\n",
+    "        data = data.replace('\"gradients/', '\"b_')\n",
+    "        #print(data)\n",
+    "    code = \"\"\"\n",
+    "        <script>\n",
+    "          function load() {{\n",
+    "            document.getElementById(\"{id}\").pbtxt = {data};\n",
+    "          }}\n",
+    "        </script>\n",
+    "        <link rel=\"import\" href=\"https://tensorboard.appspot.com/tf-graph-basic.build.html\" onload=load()>\n",
+    "        <div style=\"height:600px\">\n",
+    "          <tf-graph-basic id=\"{id}\"></tf-graph-basic>\n",
+    "        </div>\n",
+    "    \"\"\".format(data=repr(data), id='graph'+str(np.random.rand()))\n",
+    "\n",
+    "    iframe = \"\"\"\n",
+    "        <iframe seamless style=\"width:{}px;height:{}px;border:0\" srcdoc=\"{}\"></iframe>\n",
+    "    \"\"\".format(width, height, code.replace('\"', '&quot;'))\n",
+    "    display(HTML(iframe))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe seamless style=\"width:1200px;height:800px;border:0\" srcdoc=\"\n",
+       "        <script>\n",
+       "          function load() {\n",
+       "            document.getElementById(&quot;graph0.25707819463204806&quot;).pbtxt = 'node {\\n  name: &quot;ones&quot;\\n  op: &quot;Const&quot;\\n  attr {\\n    key: &quot;dtype&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n  attr {\\n    key: &quot;value&quot;\\n    value {\\n      tensor {\\n        dtype: DT_FLOAT\\n        tensor_shape {\\n        }\\n        float_val: 1.0\\n      }\\n    }\\n  }\\n}\\nnode {\\n  name: &quot;ones_1&quot;\\n  op: &quot;Const&quot;\\n  attr {\\n    key: &quot;dtype&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n  attr {\\n    key: &quot;value&quot;\\n    value {\\n      tensor {\\n        dtype: DT_FLOAT\\n        tensor_shape {\\n        }\\n        float_val: 1.0\\n      }\\n    }\\n  }\\n}\\nnode {\\n  name: &quot;add&quot;\\n  op: &quot;Add&quot;\\n  input: &quot;ones&quot;\\n  input: &quot;ones_1&quot;\\n  attr {\\n    key: &quot;T&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n}\\nnode {\\n  name: &quot;ones_2&quot;\\n  op: &quot;Const&quot;\\n  attr {\\n    key: &quot;dtype&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n  attr {\\n    key: &quot;value&quot;\\n    value {\\n      tensor {\\n        dtype: DT_FLOAT\\n        tensor_shape {\\n        }\\n        float_val: 1.0\\n      }\\n    }\\n  }\\n}\\nnode {\\n  name: &quot;ones_3&quot;\\n  op: &quot;Const&quot;\\n  attr {\\n    key: &quot;dtype&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n  attr {\\n    key: &quot;value&quot;\\n    value {\\n      tensor {\\n        dtype: DT_FLOAT\\n        tensor_shape {\\n        }\\n        float_val: 1.0\\n      }\\n    }\\n  }\\n}\\nnode {\\n  name: &quot;add_1&quot;\\n  op: &quot;Add&quot;\\n  input: &quot;ones_2&quot;\\n  input: &quot;ones_3&quot;\\n  attr {\\n    key: &quot;T&quot;\\n    value {\\n      type: DT_FLOAT\\n    }\\n  }\\n}\\n';\n",
+       "          }\n",
+       "        </script>\n",
+       "        <link rel=&quot;import&quot; href=&quot;https://tensorboard.appspot.com/tf-graph-basic.build.html&quot; onload=load()>\n",
+       "        <div style=&quot;height:600px&quot;>\n",
+       "          <tf-graph-basic id=&quot;graph0.25707819463204806&quot;></tf-graph-basic>\n",
+       "        </div>\n",
+       "    \"></iframe>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "a = tf.ones(())\n",
+    "b = tf.ones(())\n",
+    "c = a + b \n",
+    "show_graph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"graphvis.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
