Add recipe for AMI query and deleting placement groups

--- a/aws-scratch.ipynb
+++ b/aws-scratch.ipynb
@@ -10734,6 +10734,361 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AMI retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pytorch.imagenet.source.v2 ami-78dfe807\n",
+      "pytorch.imagenet ami-a9bb9bd6\n"
+     ]
+    }
+   ],
+   "source": [
+    "filter = {'Name': 'name', 'Values' : ['pytorch*']}\n",
+    "for i in ec2.images.filter(Filters = [filter], Owners=['self']):\n",
+    "  print(i.name, i.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ami-a9bb9bd6'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lookup_ami(wildcard):\n",
+    "  filter = {'Name': 'name', 'Values' : [wildcard]}\n",
+    "  images = list(ec2.images.filter(Filters = [filter], Owners=['self']))\n",
+    "  assert len(images)<=1, \"Multiple images match \"+str(wildcard)\n",
+    "  assert len(images)>=0, \"No images match \"+str(wildcard)\n",
+    "  return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean-up placement groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "client = u.create_ec2_client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ec2 = u.create_ec2_resource()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting tf\n",
+      "   Succeeded\n",
+      "Deleting run01\n",
+      "   Succeeded\n",
+      "Deleting c5\n",
+      "   Succeeded\n",
+      "Deleting psbench9\n",
+      "   Succeeded\n",
+      "Deleting gloop2p\n",
+      "   Succeeded\n",
+      "Deleting raybench44\n",
+      "   Succeeded\n",
+      "Deleting yaro16\n",
+      "   Succeeded\n",
+      "Deleting placement\n",
+      "   Succeeded\n",
+      "Deleting yaro_test\n",
+      "   Succeeded\n",
+      "Deleting tfbench\n",
+      "   Succeeded\n",
+      "Deleting psbench6\n",
+      "   Succeeded\n",
+      "Deleting psbench7\n",
+      "   Succeeded\n",
+      "Deleting yaro-friday-16\n",
+      "   Succeeded\n",
+      "Deleting simple\n",
+      "   Succeeded\n",
+      "Deleting tfbench44\n",
+      "   Succeeded\n",
+      "Deleting singlerun\n",
+      "   Failed\n",
+      "Deleting raybench20\n",
+      "   Succeeded\n",
+      "Deleting many02\n",
+      "   Succeeded\n",
+      "Deleting raybench2\n",
+      "   Succeeded\n",
+      "Deleting raybench17\n",
+      "   Succeeded\n",
+      "Deleting run03\n",
+      "   Succeeded\n",
+      "Deleting eight\n",
+      "   Succeeded\n",
+      "Deleting raybench3\n",
+      "   Succeeded\n",
+      "Deleting yaro-friday-8\n",
+      "   Succeeded\n",
+      "Deleting c5amazon00\n",
+      "   Succeeded\n",
+      "Deleting psbench13\n",
+      "   Succeeded\n",
+      "Deleting raybench4\n",
+      "   Succeeded\n",
+      "Deleting async\n",
+      "   Succeeded\n",
+      "Deleting psbench12\n",
+      "   Succeeded\n",
+      "Deleting nccl\n",
+      "   Succeeded\n",
+      "Deleting pytorch_cluster_f\n",
+      "   Succeeded\n",
+      "Deleting p2pgpu\n",
+      "   Succeeded\n",
+      "Deleting psbench3\n",
+      "   Succeeded\n",
+      "Deleting run02\n",
+      "   Succeeded\n",
+      "Deleting raybench19\n",
+      "   Succeeded\n",
+      "Deleting many01\n",
+      "   Succeeded\n",
+      "Deleting raybench16\n",
+      "   Succeeded\n",
+      "Deleting nexus00\n",
+      "   Succeeded\n",
+      "Deleting raybench14\n",
+      "   Succeeded\n",
+      "Deleting psbench5\n",
+      "   Succeeded\n",
+      "Deleting run\n",
+      "   Succeeded\n",
+      "Deleting raybench18\n",
+      "   Succeeded\n",
+      "Deleting somegroup\n",
+      "   Succeeded\n",
+      "Deleting raybench5\n",
+      "   Succeeded\n",
+      "Deleting sixteen\n",
+      "   Succeeded\n",
+      "Deleting yaro_16\n",
+      "   Succeeded\n",
+      "Deleting psbench11\n",
+      "   Succeeded\n",
+      "Deleting raybench\n",
+      "   Succeeded\n",
+      "Deleting raybench15\n",
+      "   Succeeded\n",
+      "Deleting allreduce\n",
+      "   Succeeded\n",
+      "Deleting tfbench4\n",
+      "   Succeeded\n",
+      "Deleting psbench10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for group in ec2.placement_groups.all():\n",
+    "  try:\n",
+    "    print(\"Deleting \"+group.name)\n",
+    "    group.delete()\n",
+    "  except:\n",
+    "    print(\"   Failed\")\n",
+    "  else:\n",
+    "    print(\"   Succeeded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c5amazon00'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PlacementGroups': [{'GroupName': 'raybench3',\n",
+       "   'State': 'available',\n",
+       "   'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'sixteen', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'singlerun', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'c5amazon00', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'tfbench', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'p2pgpu', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'tfbench4', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench7', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'async', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'somegroup', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench11', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench16', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench19', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench12', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench10', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro-friday-8', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'run2', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench15', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench5', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench4', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'eight', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'pytorch_cluster_f',\n",
+       "   'State': 'available',\n",
+       "   'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'tfbench44', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench6', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench44', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro-friday-16', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'gpu', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'run03', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'many02', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'run01', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro8', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench17', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench3', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'nccl', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench4', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'c5amazon01', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench20', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench8', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'simple', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'many01', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench5', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro_16', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro16', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench9', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench14', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench18', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'run', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'nexus00', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'c5', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'placement', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'psbench13', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'tf', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'yaro_test', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'raybench2', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'run02', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'allreduce', 'State': 'available', 'Strategy': 'cluster'},\n",
+       "  {'GroupName': 'gloop2p', 'State': 'available', 'Strategy': 'cluster'}],\n",
+       " 'ResponseMetadata': {'HTTPHeaders': {'content-type': 'text/xml;charset=UTF-8',\n",
+       "   'date': 'Sat, 14 Jul 2018 15:27:38 GMT',\n",
+       "   'server': 'AmazonEC2',\n",
+       "   'transfer-encoding': 'chunked',\n",
+       "   'vary': 'Accept-Encoding'},\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'RequestId': '114c5728-9464-4fee-b444-ba723c196f48',\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.describe_placement_groups()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "  client = u.create_ec2_client()\n",
+    "  try:\n",
+    "    # TODO: check that the error is actually about placement group\n",
+    "    client.describe_placement_groups(GroupNames=[name])\n",
+    "  except boto3.exceptions.botocore.exceptions.ClientError as e:\n",
+    "    # \n",
+    "    print(\"Creating placement group: \"+name)\n",
+    "    res = client.create_placement_group(GroupName=name, Strategy='cluster')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
