--- a/imagenet15-scratch.ipynb
+++ b/imagenet15-scratch.ipynb
@@ -43,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -89,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -118,14 +114,209 @@
     "plt.plot(times_ms[:100])\n",
     "plt.ylabel('ms')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Get in/out bytes from /proc/net/dev\n",
+    "def network_bytes():\n",
+    "  import subprocess\n",
+    "  proc = subprocess.Popen(['cat', '/proc/net/dev'], stdout=subprocess.PIPE)\n",
+    "  stdout,stderr = proc.communicate()\n",
+    "  stdout=stdout.decode('ascii')\n",
+    "\n",
+    "  recv_bytes = 0\n",
+    "  transmit_bytes = 0\n",
+    "  lines=stdout.strip().split('\\n')\n",
+    "  lines = lines[2:]  # strip header\n",
+    "  for line in lines[2:]:\n",
+    "    line = line.strip()\n",
+    "    # ignore loopback interface\n",
+    "    if line.startswith('lo'):\n",
+    "      continue\n",
+    "    toks = line.split()\n",
+    "\n",
+    "    recv_bytes += int(toks[1])\n",
+    "    transmit_bytes += int(toks[9])\n",
+    "  return recv_bytes, transmit_bytes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network_bytes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaro = [\n",
+    "  '--lr-sched', '0.14,0.47,0.78,0.95',\n",
+    "  '--epochs', 45,\n",
+    "  '--lr', 0.4,\n",
+    "  '--dist-url', 'file:///home/ubuntu/data/file.sync', # single instances are faster with file sync\n",
+    "  '--init-bn0',\n",
+    "  '--batch-sched', 64,\n",
+    "  '--num-tasks', 1\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['--num-tasks']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[v for v in yaro if v=='--num-tasks']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['--lr-sched',\n",
+       " '0.14,0.47,0.78,0.95',\n",
+       " '--epochs',\n",
+       " 45,\n",
+       " '--lr',\n",
+       " 0.4,\n",
+       " '--dist-url',\n",
+       " 'file:///home/ubuntu/data/file.sync',\n",
+       " '--init-bn0',\n",
+       " '--batch-sched',\n",
+       " 64,\n",
+       " '--num-tasks',\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(yaro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del yaro[12], yaro[11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['--lr-sched',\n",
+       " '0.14,0.47,0.78,0.95',\n",
+       " '--epochs',\n",
+       " 45,\n",
+       " '--lr',\n",
+       " 0.4,\n",
+       " '--dist-url',\n",
+       " 'file:///home/ubuntu/data/file.sync',\n",
+       " '--init-bn0',\n",
+       " '--batch-sched',\n",
+       " 64]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yaro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   },
   "toc": {
    "colors": {
